Added custom folding for perl
It's a start, based on Drew Neil's screencast at
http://vimcasts.org/episodes/writing-a-custom-fold-expression/.

Also:
- added tpope's vim-dispatch
- set visualbell
- changed mapping for git pull to ,gu

--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "vim/bundle/perl"]
 	path = vim/bundle/perl
 	url = git://github.com/vim-perl/vim-perl.git
+[submodule "vim/bundle/dispatch"]
+	path = vim/bundle/dispatch
+	url = git://github.com/tpope/vim-dispatch.git
