--- a/tmux.conf
+++ b/tmux.conf
@@ -2,15 +2,7 @@
 # http://bentomas.com/2012-03-28/256-colors-in-tmux.html
 #set -g terminal-overrides 'xterm:colors=256'
 #set -g default-terminal "xterm"
-
-# plenty of scroll back in copy mode
-set -g history-limit 100000
-
-# decrease delay
-set -s escape-time 1
-
-# expect utf8
-setw -g utf8 on
+set -g terminal-overrides "screen.xterm-new"
 
 # use vi navigation in copy mode
 set -g mode-keys vi
@@ -18,7 +10,7 @@ set -g mode-keys vi
 # status line
 set -g status-right-length 45
 set -g status-right "Batt: #(pmset -g batt | awk 'NR==2 {gsub(/;/,\"\"); \
-    print (match($3,/^ch/) ? \"⚡ \":\"\") $2}') | #{=21:pane_title} \
+    print (match($4,/^ch/) ? \"⚡ \":\"\") $3}') | #{=21:pane_title} \
 | %H:%M %a %d-%b"
 
 # splitting panes
@@ -37,35 +29,73 @@ bind J resize-pane -D 5
 bind K resize-pane -U 5
 bind L resize-pane -R 5
 
-# colors
-set -g status-fg white
-set -g status-bg black
-
-setw -g window-status-fg cyan
-setw -g window-status-bg default
-setw -g window-status-attr dim
-
-setw -g window-status-current-fg white
-setw -g window-status-current-bg default
-setw -g window-status-current-attr normal
-
 # activity
 setw -g monitor-activity on
 set -g visual-activity on
 
-setw -g window-status-activity-attr bold
-setw -g window-status-content-attr bold
-
-setw -g window-status-bell-fg red
-setw -g window-status-bell-bg white
-
-set -g pane-border-fg white
-set -g pane-border-bg black
-set -g pane-active-border-fg black
-set -g pane-active-border-bg white
+set -g pane-border-bg colour235
+set -g pane-border-fg colour238
+set -g pane-active-border-bg colour236
+set -g pane-active-border-fg colour51
 
 # key bindings
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # bind to the system clipboard
-set-option -g default-command "reattach-to-user-namespace -l bash"
+set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+
+#### COLOUR (Solarized 256)
+
+# default statusbar colors
+set-option -g status-bg colour235 #base02
+set-option -g status-fg colour136 #yellow
+set-option -g status-attr default
+
+# statusbar activity
+#setw -g window-status-activity-attr bold
+#setw -g window-status-content-attr bold
+set-window-option -g window-status-activity-style fg=colour235,bg=colour136 #base02, red
+
+# default window title colors
+set-window-option -g window-status-fg colour244 #base0
+set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
+
+# active window title colors
+set-window-option -g window-status-current-fg colour166 #orange
+set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-attr bright
+
+# pane border
+set-option -g pane-border-fg colour235 #base02
+set-option -g pane-active-border-fg colour240 #base01
+
+# message text
+set-option -g message-bg colour235 #base02
+set-option -g message-fg colour166 #orange
+
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
+
+# clock
+set-window-option -g clock-mode-colour colour64 #green
+
+# bell
+set-window-option -g window-status-bell-style fg=colour235,bg=colour160 #base02, red
+
+#setw -g window-status-bell-fg red
+#setw -g window-status-bell-bg white
+
+#  List of plugins
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-open'
+
+# Since I use vi mode, tmux-yank needs:
+set -g @shell_mode 'vi'
+
+# Initialize TMUX plugin manager
+run '~/.tmux/plugins/tpm/tpm'
